# eCjp

./: .gitignore  LICENSE  Makefile  Makefile.am  README-IT.md  README.md  configure.ac
include/: ecjp.h  ecjp_limit.h
scripts/: run_test.sh  test_all.sh
src/: Makefile.am  ecjp.c  example_ecjp.c  example_ecjp_1.c  example_ecjp_2.c  example_ecjp_3.c  example_ecjp_4.c  example_ecjp_full.c  test_lib_check_and_load.c  test_lib_check_syntax.c  test_lib_get_key.c  test_lib_load.c  test_lib_read_array.c  test_lib_version.c
tests/: invalid_04_leading_zero.json  invalid_05_bad_escape.json  invalid_06_NaN_Infty.json  invalid_07_missing_comma.json  invalid_09_unclosed_object.json  invalid_11_control_char_in_string.json  invalid_12_plus_sign_number.json  invalid_13_trailing_garbage.json  invalid_14_unicode_wrong.json  invalid_15_missing_quote_in_key.json  invalid_16_missing_quote_in_value.json  invalid_17_wrong_array_content.json  invalid_18_missing_last_bracket.json  invalid_19_mismatch_brackets.json  invalid_20_mismatch_brackets_2.json  invalid_21_trailing_comma_2.json  valid_01_simple.json  valid_02_array.json  valid_03_unicode.json  valid_04_numbers.json  valid_05_nested.json  valid_06_empty_structures.json  valid_07_whitespace.json  valid_08_escaped_unicode.json  valid_09_large_number.json  valid_10_duplicate_keys.json  valid_11_deep_nesting.json  valid_12_simple_multiline.json  valid_13_bool_values.json  valid_14_mixed_values.json  valid_15_initial_space.json  valid_16_decimals_numbers.json  valid_17_object_value.json  valid_18_object_value_duplicated_key.json  valid_19_complex_array.json  valid_20_complex_array_2.json  valid_21_complex_mix.json  valid_22_complex_mix_2.json  valid_23_array_multilines.json  valid_24_db_example.json  (+3 more)
